# CppLazy

./: .gitignore  CMakeLists.txt  README.md
include/Lazy/: Flatten.hpp  Map.hpp
include/Lazy/detail/: BasicIteratorView.hpp  CartesianProductIterator.hpp  ChunksIterator.hpp  ConcatenateIterator.hpp  FilterIterator.hpp  FlattenIterator.hpp  FunctionContainer.hpp  GroupByIterator.hpp  LazyTools.hpp  LoopIterator.hpp  LoopIterators.hpp  MapIterator.hpp  RandomIterator.hpp  RangeIterator.hpp  SplitIterator.hpp  UniqueIterator.hpp  ZipIterator.hpp
